commiting the docs for 2.x

--- a/modules/wheel.htm
+++ b/modules/wheel.htm
@@ -43,8 +43,8 @@
     <p>Vehicles will be loaded as encountered, the bolt pattern must be formatted as shown.</p>
 
     <h2>Add 'Bolt Pattern to Wheel'</h2>
-    <p>When editing a product add one or more bolt patterns and press save. This sets the wheel specification of your product and simultaneously will add all the applicable vehicle applications. This allows your customer to search for wheels by vehicle.</p>
-    <p>Please note, when you set the bolt pattern &amp; press save, matching vehicles are added. You cannot delete fitments without first clearing out the bolt pattern. Also note that clearing out the bolt pattern will not automatically delete any fitments, just prevent them from being automatically (re)added upon (re)saving the product.</p>
+    <br />
+    When editing a product add one or more bolt patterns and press save. This sets the wheel specification of your product and simultaneously will add all the applicable vehicle applications. This allows your customer to search for wheels by vehicle.
 
     <h2>Import 'bolt pattern to wheel'</h2>
     <br />
@@ -76,6 +76,6 @@
 
     <h2>Activate Wheel Search</h2>
     <br />
-    In your theme's path, under the layout folder open 'vaf/vafwheel.xml'. Uncomment the layout XML to activate the wheel search on the front-end. This allows a customer to search by bolt pattern (search by wheel size). Next in the template path open vafwheel/search.phtml and edit in the URL of your wheel category to the form action.
+    In your theme's path, under the layout folder open 'vafwheel.xml'. Uncomment the layout XML to activate the wheel search on the front-end. This allows a customer to search by bolt pattern (search by wheel size). Next in the template path open vafwheel/search.phtml and edit in the URL of your wheel category to the form action.
 
 </body></html>
