--- a/toc.htm
+++ b/toc.htm
@@ -23,13 +23,12 @@
 </head>
 <body>
 
-<h4>Vehicle Fits v3.0.0</h4>
+<h4>Vehicle Fits v2-build-37</h4>
 
 <b>User Guide</b>
 <ul>
-    <li><a href="install.htm">Install</a></li>
-    <li><a href="upgrading.htm">Upgrading</a></li>
-    <li><a href="developer.htm">Developers</a></li>
+    <li><a href="install.htm" target="content">Install</a></li>
+    <li><a href="developer.htm" target="content">Developers</a></li>
     <li>
         <a href="configuration.htm">Configuration Guide</a>
         <ul>
@@ -44,7 +43,6 @@
             <li><a href="configuration.htm#logo">Logo</a></li>
             <li><a href="configuration.htm#importer">Importer</a></li>
             <li><a href="configuration.htm#tire">Tire</a></li>
-            <li><a href="configuration.htm#module_status">Module Status</a></li>
         </ul>
     </li>
     <li><a href="changinglevels.htm">Change Levels (Schema)</a></li>
@@ -142,6 +140,10 @@
     <li><a href="modules/paint.htm">Paint Codes</a></li>
 </ul>
 
+<b>Upgrading the extension</b> 
+<ul>
+    <li><a href="upgrading.htm">Upgrading</a></li>
+</ul>
 <b>Release Notes</b> 
 <ul>
     <li><a href="3rdparty.htm">Third Party Modules</a></li>
@@ -152,5 +154,9 @@
 <ul>
     <li><a href="glossary.htm">Glossary</a></li>
 </ul>
+ 
+<br />   
+&copy; 2008-2011 /  Ne8, LLC  / <a href="http://www.vehiclefits.com" target="_blank">www.vehiclefits.com</a> / www.ne8.net /  Josh Ribakoff
+
     
 </body></html>
